crates/aura-app/tests/ui/root_workflows_private.rs
fn main() {
    let _ = aura_app::workflows::invitation::accept_invitation;
}
